<resources>
    <string name="app_name">CalculatorDemo</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="doubleZero">00</string>
    <string name="dot">.</string>
    <string name="allClear">AC</string>
    <string name="erace"><![CDATA[<--]]></string>
    <string name="modulo">%</string>
    <string name="equalto">=</string>
</resources>